--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
   <link rel="stylesheet" href="./scss/custom.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
-  
+
+
+
 
 </head>
 
 <body>
-
+  <!-- Header -->
   <nav class="navbar navbar-expand-lg bg-light animate__animated animate__fadeInDown">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
@@ -136,7 +134,9 @@
       </footer>
   </main>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
 
 </body>
 
