--- a/pages/equip.html
+++ b/pages/equip.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>PimsPums Co.</title>
+    <title>Tienda Online de PimsPums Co.</title>
 
     <!-- CSS, SCSS & BOOSTRAP-->
 
