--- a/pages/lanzamientos.html
+++ b/pages/lanzamientos.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="../pages/indumentaria.html">Indumentaria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/outlet.html">Outlet</a>
+                        <a class="nav-link" href="../pages/outlet.html">Contacto</a>
                     </li>
 
                 </ul>
